--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ancoders",
+  "homepage": "https://Ashish-coder12.github.io/react-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,8 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^5.0.0-beta1",
+    "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
